feat: external subscribe, v2node TLS normalize, and Docker packaging
Fix v2node group_id casting so nodes appear in admin, share tls_settings normalization with Reality helpers, and add external subscribe sync plus container deploy configs.

Co-authored-by: Cursor <cursoragent@cursor.com>