@@ -6,18 +6,17 @@ import com.v2board.api.common.BusinessException;
 import com.v2board.api.mapper.KnowledgeMapper;
 import com.v2board.api.model.Knowledge;
 import com.v2board.api.model.User;
+import com.v2board.api.service.ConfigService;
 import com.v2board.api.service.UserService;
 import com.v2board.api.util.Helper;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -34,20 +33,8 @@ public class KnowledgeController {
     @Autowired
     private UserService userService;
 
-    @Value("${v2board.app-name:V2Board}")
-    private String appName;
-
-    @Value("${v2board.subscribe-path:/api/v1/client/subscribe}")
-    private String subscribePath;
-
-    @Value("${v2board.subscribe-url:}")
-    private String subscribeUrlConfig;
-
-    @Value("${v2board.show-subscribe-method:0}")
-    private Integer subscribeMethod;
-
-    @Value("${v2board.show-subscribe-expire:5}")
-    private Integer subscribeExpire;
+    @Autowired
+    private ConfigService configService;
 
     /**
      * 对齐 PHP V1\\User\\KnowledgeController::fetch
@@ -78,20 +65,13 @@ public class KnowledgeController {
                 knowledge.setBody(body);
             }
 
-            String subscribeUrl = Helper.getSubscribeUrl(
-                    user.getToken(),
-                    user.getId(),
-                    subscribeMethod,
-                    subscribePath,
-                    subscribeUrlConfig,
-                    subscribeExpire
-            );
+            String subscribeUrl = configService.buildSubscribeUrl(user.getToken(), user.getId());
 
             String body = knowledge.getBody();
             if (body == null) {
                 body = "";
             }
-            body = body.replace("{{siteName}}", appName);
+            body = body.replace("{{siteName}}", configService.getAppName());
             body = body.replace("{{subscribeUrl}}", subscribeUrl);
             body = body.replace("{{urlEncodeSubscribeUrl}}", urlEncode(subscribeUrl));
             body = body.replace("{{safeBase64SubscribeUrl}}", Helper.base64EncodeUrlSafe(subscribeUrl));
@@ -123,11 +103,7 @@ public class KnowledgeController {
     }
 
     private String urlEncode(String value) {
-        try {
-            return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            return value;
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
     private String formatAccessData(String body) {
